# company-service-public

./: CONTRIBUTING.md  MAINTAINERS.md  README.md  cs.code-workspace  docker-compose.yml
.github/workflows/: push-docker-image-api.yml  push-docker-image-scraper-service.yml  test-company-service.yml  test-scraper-service.yml
api/: .env  .eslintrc.js  Dockerfile  README.md  package-lock.json  package.json
api/config/: docker_dev.env  local.env
api/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  main.ts
api/src/company/: company-service.interface.ts  company.controller.spec.ts  company.controller.ts  company.model.ts  company.module.ts  company.service.spec.ts  company.service.ts  inmemory.company.service.ts
api/test/: app.e2e-spec.ts
background-scrapers/skeleton/: .gitignore  Makefile  README.md
batch-scrapers/denmark/: .env.template  .gitignore  Makefile  README.md  mypy.ini  poetry.toml  pyproject.toml
batch-scrapers/denmark/dev/: README.md  chpwd-python-helper.zsh
batch-scrapers/denmark/docker/: README.md  docker-compose.generate-client.yml
batch-scrapers/denmark/scrapers/: denmark_scraper.py  example_skeleton_scraper.py
batch-scrapers/denmark/src/normative_batch_scrapers/: util.py
batch-scrapers/denmark/src/normative_batch_scrapers/scraper/denmark/: classification_mappings.py  response_parser.py  scraper.py  scrolldownloader.py  transformer.py
batch-scrapers/denmark/test/: test_scraper_denmark_response_parser.py  test_scraper_denmark_scrolldownloader.py
batch-scrapers/denmark/test/data/: example_initial_scroll_response.json
batch-scrapers/skeleton/: .env  .gitignore  Makefile  README.md  requirements.txt
kube/: README.md  api.yaml  mongo.yaml  scraper-service.yaml
kube/grafana_dashboards/: company_service.json
kube/prometheus_configs/: extra_scrape_configs.yaml
scraper-service/: .dockerignore  .env  Dockerfile  README.md  package-lock.json  package.json
scraper-service/scripts/: generate-models.sh
scraper-service/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  main.ts
scraper-service/test/: app.e2e-spec.ts
(+70 files in other folders)
